--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,14 @@ body {
 	border-radius: 10px;
 }
 
+.section:first-of-type {
+	border-bottom-width: 4px;
+	padding: 0px;
+}
+
 .section {
-	margin: 15px;
+	padding-bottom: 50px;
+	margin: 0px 20px 50px;
 	border-bottom: 2px solid #d6dbdf;
 }
 
@@ -23,6 +29,55 @@ h1 {
 	margin: 25px 0px;
 }
 
+h2 {
+	font-weight: bold;
+}
+
 p{
 	margin: 20px 0px;
+}
+
+span {
+	font-family: monospace;
+	background-color: #d6dbdf;
+	padding: 0px 5px;
+}
+
+.block {
+	display: inline-block;
+	width: 75px;
+	padding: 30px 0px;
+	background-color: #d6dbdf;
+	margin-right: 5px;
+	border-bottom: 2px solid #839090;
+	border-radius: 5px;
+	color: #839090;
+}
+
+.block h2{
+	text-align: center;
+}
+
+.special {
+	background-color: #fe5627;
+	color: #af3f21;
+	border-color: #af3f21;
+}
+
+a{
+	background-color: #fe5627;
+	color: #af3f21;
+	text-decoration: none;
+	font-weight: bold;
+	font-size: 20pt;
+	text-align: center;
+	display: block;
+	padding: 50px;
+	width: 50%;
+	border-radius: 5px;
+}
+
+a:hover{
+	background-color: #af3f21;
+	color: #fe5627;
 }
